--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,17 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.filter=Фильтр
+meal.date.from=От даты (включая):
+meal.date.to=До даты (включая):
+meal.time.from=От времени (включая):
+meal.time.to=До времени (исключая):
+meal.date=Дата/Время
+meal.description=Описание
+meal.calories=Калории
+meal.add=Добавить еду
+meal.update=Редактировать еду
+meal.delete=Удалить еду
 common.select=Выбрать
+common.save=Сохранить
+common.cancel=Отменить
